--- a/Report3.rdlc
+++ b/Report3.rdlc
@@ -235,14 +235,14 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="sfees_name">
+                    <Textbox Name="feestype_name">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!sfees_name.Value</Value>
+                              <Value>=Fields!feestype_name.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
@@ -251,7 +251,7 @@
                           </Style>
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>sfees_name</rd:DefaultName>
+                      <rd:DefaultName>feestype_name</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -263,6 +263,7 @@
                         <PaddingBottom>2pt</PaddingBottom>
                       </Style>
                     </Textbox>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell>
@@ -677,8 +678,8 @@
           <DataField>spay_amount</DataField>
           <rd:TypeName>System.Double</rd:TypeName>
         </Field>
-        <Field Name="sfees_name">
-          <DataField>sfees_name</DataField>
+        <Field Name="feestype_name">
+          <DataField>feestype_name</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
