--- a/Report4.rdlc
+++ b/Report4.rdlc
@@ -231,21 +231,21 @@
                 </TablixCell>
                 <TablixCell>
                   <CellContents>
-                    <Textbox Name="jfees_name">
+                    <Textbox Name="feestype_name">
                       <CanGrow>true</CanGrow>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>=Fields!jfees_name.Value</Value>
+                              <Value>=Fields!feestype_name.Value</Value>
                               <Style />
                             </TextRun>
                           </TextRuns>
                           <Style />
                         </Paragraph>
                       </Paragraphs>
-                      <rd:DefaultName>jfees_name</rd:DefaultName>
+                      <rd:DefaultName>feestype_name</rd:DefaultName>
                       <Style>
                         <Border>
                           <Color>LightGrey</Color>
@@ -667,8 +667,8 @@
           <DataField>jpay_amount</DataField>
           <rd:TypeName>System.Double</rd:TypeName>
         </Field>
-        <Field Name="jfees_name">
-          <DataField>jfees_name</DataField>
+        <Field Name="feestype_name">
+          <DataField>feestype_name</DataField>
           <rd:TypeName>System.String</rd:TypeName>
         </Field>
       </Fields>
